--- a/wallet-parent/wallet-command/src/main/resources/application.yml
+++ b/wallet-parent/wallet-command/src/main/resources/application.yml
@@ -4,6 +4,20 @@ server:
 spring:
   application:
     name: wallet-command
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/wallet?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+    username: root
+    password: root
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 15
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: WalletHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
     
   kafka:
     bootstrap-servers: localhost:9092
@@ -32,6 +46,19 @@ spring:
           max-idle: 8
           min-idle: 0
           max-wait: -1
+
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
+  type-aliases-package: com.wallet.command.entity
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      id-type: input
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
       
 grpc:
   server:
